<resources>
    <string name="app_name">SkinCare</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirme_password">Confirme password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register Now</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_have_an_account_sign_in_now">You have an account? Sign in Now</string>

    <string name="facebook_app_id">527737697924210</string>
    <string name="fb_login_protocol_scheme">fb527737697924210</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="info">Information</string>
    <string name="profile">profile</string>
    <string name="saved_deseases">saved deseases</string>
    <string name="terms_and_condditions">Terms and condditions</string>
    <string name="about_skindoc">About SkinDoc</string>
    <string name="signout">SignOut</string>
    <string name="terms_SkinDoc">terms and conditions</string>
    <string name="about_SkinDoc">SkinDoc is an app that will help you diagnotic diseases in your skin by taking an image it will show you what is wrong with you and what yu have to do in details. aside from that SkinDoc is beautiful, userfriendly and easy to use app</string>
    <string name="birthday">birthday</string>
    <string name="Editprofile">Edit profile</string>
    <string name="Editpass">Edit password</string>
    <string name="take_a_picture">take a picture</string>
    <string name="take_a_picture_of_your_desease">Upload your disease picture</string>
    <string name="resultimage">ResultImage</string>
    <string name="new_photo">New Photo</string>
</resources>
