<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_saved_deases"
            android:title="@string/saved_deseases"/>


    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_and_condditions" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_skindoc" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/signout" />

    </group>



</menu>