<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentification.LoginActivity"
    android:background="@drawable/gradient_backgoud">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:fontFamily="sans-serif"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:src="@drawable/logo3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/L_Emeil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/L_EditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="16sp"
                android:maxLines="1"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/L_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/L_Emeil"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:passwordToggleTint="#FFFFFF">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/L_EditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textColorHint="#FFF"
                android:maxLines="1"
                android:textColor="#FFFFFF" />
            <ImageView
                android:id="@+id/L_show_pass"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:alpha=".5"
                android:padding="0dp"
                android:src="@drawable/ic_open_eye"
                android:onClick="ShowPass"
                tools:ignore="NotSibling" />
            </RelativeLayout>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/L_Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:layout_below="@id/L_Password"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:fontFamily="sans-serif"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/L_Forgot_Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_below="@id/L_Button"
            android:text="@string/forgot_password"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/line"
            android:layout_below="@id/L_Forgot_Button"
            android:layout_marginTop="20dp"/>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/Google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/line"
            app:layout_constraintVertical_bias="0.96"
            android:textAllCaps="false"
            app:fontFamily="sans-serif"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Google"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:fontFamily="sans-serif"
            app:layout_constraintVertical_bias="0.96" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/L_S_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Facebook"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register_now"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/L_Bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Facebook"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>