<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_backgoud">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signup"
        app:fontFamily="sans-serif"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_margin="20dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/logo3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/S_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/S_EditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textSize="20sp"
                android:maxLines="1"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/S_Emeil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/S_name"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/S_EditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="20sp"
                android:maxLines="1"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/S_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/S_Emeil"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/S_EditBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:hint="@string/birthday"
                android:inputType="text"
                android:textSize="20sp"
                android:maxLines="1"
                android:onClick="showCalander"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/S_sex"
            android:layout_below="@id/S_birth"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textSize="20sp"
                android:textColor="#FFF"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:checked="true"
                android:textSize="20sp"
                android:textColor="#FFF"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/S_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/S_sex"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:passwordToggleTint="#FFFFFF">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/S_EditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColorHint="#FFF"
                android:maxLines="1"
                android:textColor="#FFFFFF" />
                <ImageView
                    android:id="@+id/S_show_pass"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:alpha=".5"
                    android:padding="0dp"
                    android:src="@drawable/ic_open_eye"
                    android:onClick="ShowPass"
                    tools:ignore="NotSibling" />
            </RelativeLayout>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/S_ConfirmePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/S_Password"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:passwordToggleTint="#FFFFFF">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/S_EditConfirmePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:hint="@string/confirme_password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColorHint="#FFF"
                android:maxLines="1"
                android:textColor="#FFFFFF" />
                <ImageView
                    android:id="@+id/S_show_confirme"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:alpha=".5"
                    android:padding="0dp"
                    android:src="@drawable/ic_open_eye"
                    android:onClick="ShowPass"
                    tools:ignore="NotSibling" />
            </RelativeLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/S_Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_below="@id/S_ConfirmePassword"
            android:textAllCaps="false"
            app:fontFamily="sans-serif"/>

        <ProgressBar
            android:id="@+id/S_Bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/S_Button"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/S_L_Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/S_Button"
            android:text="@string/you_have_an_account_sign_in_now"
            android:textSize="20sp" />


    </RelativeLayout>


</androidx.core.widget.NestedScrollView>